fixed new truncate

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,8 +116,3 @@ aside p {
 	font-size: 75%;
 	vertical-align: super;
 }
-
-/* Excerpt for index.html */
-.excerpt {
-/*	visibility: hidden;*/
-}
